--- a/old.html
+++ b/old.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">Welcome to my blog</h1>
-    <h3 class="title" id="important">Written by Preshant</h3>
-    <h3>Date: 1 Jan 2024</h3>
-   
+    <h1>Welcome to my blog</h1>
+    <h4>Today is a rainy day</h4>
+    <a href="https://nea.gov.sg">Link to NEA's website</a>
+    <h2>Other links</h2>
+    <a href="https://techup.live" class=”>Check out past apps</a>
 </body>
 </html>
